syntax = "proto3";
package api;

option go_package = "api;api";

message ProtoExposedList {
    int64 batchReleaseTime = 1;
    repeated ProtoExposee exposed = 2;
}

message ProtoExposee {
    bytes key = 2;
    int64 keyDate = 3;

    // Optional fields to convert from JSON POST
    ProtoAuthData authData = 4;
    int32 fake = 5;
}

message ProtoAuthData {
    string value = 1;
}
